Fix styling for <hr> in dark mode

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -60,3 +60,7 @@ a {
 		outline: 2px var(--dark-primary) solid;
 	}
 }
+
+hr {
+	background: var(--text-lighter);
+}
